상품진열관리

--- a/src/main/resources/templates/admin/product/display.html
+++ b/src/main/resources/templates/admin/product/display.html
@@ -48,5 +48,12 @@
             </tr>
         </table>
     </script>
+    <script type="text/html" id="tpl_item">
+        <div class="item" id="item_[num]_[seq]">
+            <input type="hidden" name="seq_[num]" value="[seq]">
+            <div class="image">[image]</div>
+            <div class="product_name">[name]</div>
+        </div>
+    </script>
 </section>
 </html>
