--- a/src/main/resources/templates/front/recipe/_form.html
+++ b/src/main/resources/templates/front/recipe/_form.html
@@ -5,11 +5,16 @@
     <input type="hidden" name="gid" th:field="*{gid}">
 
     <div class="main_image_box">
-        <div class="upload_files" id="main_images" data-image-only="true">
+        <div class="upload_files" th:classappend="*{mainImages != null && !mainImages.isEmpty()} ? 'uploaded'" id="main_images" data-image-only="true"
+             th:style="*{@utils.backgroundStyle(mainImages[0], 600, 600)}">
             <i class="xi-plus"></i>
             <div class="txt" th:text="#{대표_이미지_업로드}"></div>
         </div>
-        <div class="thumbs"></div>
+        <div class="thumbs">
+            <th:block th:if="*{mainImages != null}" th:each="item : *{mainImages}">
+                <th:block th:replace="~{common/_image_file::item}"></th:block>
+            </th:block>
+        </div>
     </div>
     <!--// main_image_box -->
 
@@ -18,7 +23,7 @@
         <div class="error" th:each="err : ${#fields.errors('rcpName')}" th:text="${err}"></div>
     </div>
     <div class="rows">
-        <textarea name="rcpInfo" th:placeholder="#{레시피에_대한_간단한_설명을_덧붙여주세요.}"></textarea>
+        <textarea name="rcpInfo" th:placeholder="#{레시피에_대한_간단한_설명을_덧붙여주세요.}" th:field="*{rcpInfo}"></textarea>
     </div>
 
     <div class="stit" th:text="#{예상_소요_시간}"></div>
@@ -57,21 +62,39 @@
         <div class="stit" th:text="#{필수재료}"></div>
 
         <div class="input_item_box" id="requiredIng">
-            <div class="item_box"><input placeholder="예) 당근" type="text" name="requiredIng"><input placeholder="1 개" type="text" name="requiredIngEa"><button type="button"><i class="remove_item xi-close"></i></button></div>
-
+            <div class="item_box" th:if="*{requiredIng != null}"
+                 th:each="item, status : *{requiredIng}">
+                <input placeholder="예) 당근" type="text" name="requiredIng" th:value="${item}">
+                <input placeholder="1 개" type="text" name="requiredIngEa" th:value="${requestRecipe.requiredIngEa[status.index]}">
+                <button type="button" class="remove_item"><i class="xi-close"></i></button>
+            </div>
         </div>
         <button type="button" th:text="#{추가}" data-id="requiredIng" data-name="requiredIng" class="add_input_item"></button>
     </div>
     <div class="rows">
         <div class="stit" th:text="#{부재료}"></div>
 
-        <div class="input_item_box" id="subIng"></div>
+        <div class="input_item_box" id="subIng">
+            <div class="item_box" th:if="*{subIng != null}"
+                 th:each="item, status : *{subIng}">
+                <input placeholder="예) 당근" type="text" name="subIng" th:value="${item}">
+                <input placeholder="1 개" type="text" name="subIngEa" th:value="${requestRecipe.subIngEa[status.index]}">
+                <button type="button" class="remove_item"><i class="xi-close"></i></button>
+            </div>
+        </div>
         <button type="button" th:text="#{추가}" data-id="subIng" data-name="subIng" class="add_input_item"></button>
     </div>
     <div class="rows">
         <div class="stit" th:text="#{양념}"></div>
 
-        <div class="input_item_box" id="condiments"></div>
+        <div class="input_item_box" id="condiments">
+            <div class="item_box" th:if="*{condiments != null}"
+                 th:each="item, status : *{condiments}">
+                <input placeholder="예) 당근" type="text" name="condiments" th:value="${item}">
+                <input placeholder="1 개" type="text" name="condimentsEa" th:value="${requestRecipe.condimentsEa[status.index]}">
+                <button type="button" class="remove_item"><i class="xi-close"></i></button>
+            </div>
+        </div>
         <button type="button" th:text="#{추가}" data-id="condiments" data-name="condiments" class="add_input_item"></button>
     </div>
     <th:block th:replace="~{common/_file_tpl::image1_tpl}"></th:block>
