--- a/src/main/resources/templates/common/_image_file.html
+++ b/src/main/resources/templates/common/_image_file.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<div th:fragment="item" th:if="${item != null}" th:object="${item}" class="image1_tpl_box" th:id="*{'file_' + seq}">
+<div th:fragment="item" th:if="${item != null}" th:object="${item}" class="image1_tpl_box" th:id="*{'file_' + seq}" th:data-url="*{fileUrl}">
     <a th:href="@{/file/delete/{seq}(seq=*{seq})}" onclick="return confirm('정말 삭제하시겠습니까?');" class="remove" target="ifrmProcess">
         <i class="xi-close"></i>
     </a>
