--- a/src/main/resources/templates/admin/outlines/_side.html
+++ b/src/main/resources/templates/admin/outlines/_side.html
@@ -12,5 +12,8 @@
             <i class="xi-list"></i> 상품 관리
         </a>
 
+        <a th:href="@{/admin/order}" th:classappend="${menuCode} == 'order' ? 'on'">
+            <i class="xi-list"></i> 주문 관리
+        </a>
     </aside>
 </html>
